--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Anta&family=Gloria+Hallelujah&family=Roboto:wght@300&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
+  background-color:  rgb(38, 38, 42) ;
+  width: 100vw;
+  height: 100vh;
+  color:aliceblue;
+  font-size: 15px;
+  font-family: "Anta", sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p{
+  padding: 20px 20px;
+}
+.main-container{
+  width: 90%;
+  height: 50%;
+  margin: 5% auto;
+}
+.clock-container{
+  display: flex;
+  width: 400px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
+.box{
+  width: 50%;
+  margin: 0 auto;
+}
+.button-control{
+  width: 40%;
+}
+.center{
+  width: 50%;
+  margin: 0 auto;
+}
+.center-text{
+  text-align: center;
+}
+button{
+  background-color: transparent;
+  border: 3px solid rgb(233, 233, 234);
+  color: white;
+  height: 40px;
+  font-size: 20px;
+}
+.time-box{
+  width: 400px;
+  margin: 0 auto;
+  border: 5px solid rgb(181, 181, 203);
+  border-radius: 10px;
+  padding-bottom: 20px;
 }
